# Hemodilution_calcs

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
hemodilution_calcs/: __init__.py  _operations.py  main.py
tests/: test_algorithm.py
tests/test_files/: 13_Aria.fcs  13_Aurora.fcs  13_Canto.fcs  13_Lyric.fcs  1_Aria.fcs  1_Aurora.fcs  1_Canto.fcs  1_Lyric.fcs  6_Aria.fcs  6_Aurora.fcs  6_Canto.fcs  6_Lyric.fcs  values.json
