[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hemodilution_calcs"
version = "1.0.0"
description = "Mi librería de ejemplo con main y operaciones"
authors = [
    { name="Adrian Lecrevisse", email="alecrevisse@immunostep.com" }
]
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "fcsparser==0.2.8",
    "hdbscan==0.8.39",
    "matplotlib==3.10.7",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "seaborn==0.13.2"
]
